--- a/index.html
+++ b/index.html
@@ -23,17 +23,45 @@
 	  <img src="images/fish.png">
 	  <h2>fish</h2>
 	</div>
+
 	<div class="pet-command">
 	  <img src="images/yarn.png">
 	  <h2>yarn</h2>
 	</div>
+
 	<div class="pet-command">
 	  <img src="images/catnip.png">
 	  <h2>catnip</h2>
 	</div>
       </div>
 
-    </div>
+      <div id="pet-stats">
+	<div class="pet-stat-meter">
+          <h2 class="pet-stat-label">happiness</h2>
+          <div class="pet-stat-bar">
+            <div data-mood="happiness" class="pet-stat-mood-level"> &nbsp;</div>
+            {||||||||||}
+          </div>
+        </div>
+      </div>
 
-  </body>
+      <div class="pet-stat-meter">
+        <h2 class="pet-stat-label">playful</h2>
+        <div class="pet-stat-bar">
+          <div data-mood="happiness" class="pet-stat-mood-level"> &nbsp;</div>
+          {||||||||||}
+        </div>
+      </div>
+
+      <div class="pet-stat-meter">
+        <h2 class="pet-stat-label">crazy</h2>
+        <div class="pet-stat-bar">
+          <div data-mood="happiness" class="pet-stat-mood-level"> &nbsp;</div>
+          {||||||||||}
+        </div>
+      </div>
+    </div>
+</div>
+
+</body>
 </html>
